# conways_game_of_crabs

./: Cargo.toml  LICENSE  flake.nix
src/: main.rs
