cargo-features = ["strip"]

[package]
name = "conways_game_of_crabs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.11.0"
winit = "0.28.1"
rand = "0.8.4"


[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
